# codecheck-19949

./: .gitignore  CMakeLists.txt  ai.sh  answer.md  build.sh  run.sh
.cmake/Modules/: LazyUtils.cmake
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp  word.cpp  word.hpp
src/fw/: CMakeLists.txt  cli.cpp  cli.hpp  config.cpp  config.hpp  game.cpp  game.hpp  main.cpp  process.cpp  process.hpp
test/: CMakeLists.txt
test/c++/: CMakeLists.txt
test/c++/ai/: CMakeLists.txt  main.cpp  word.cpp
test/c++/fw/: CMakeLists.txt  game.cpp  main.cpp  process.cpp
